HEmlet is wrongli placed. Index HTML edited.

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,21 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>React App</title>
+  <title>Domokos Balazs - Web & Game Developer</title>
+  <meta name="description" content="Showcasing the web and game development portfolio of Domokos Balazs. Explore innovative projects and creative designs." />
+  <meta name="keywords" content="Domokos Balazs, Web Developer, Game Developer, Portfolio, Web Development, Game Design" />
+  <meta property="og:title" content="Domokos Balazs - Web & Game Developer" />
+  <meta property="og:description" content="Discover the portfolio of Domokos Balazs, where web development meets game design. Learn about my projects, skills, and professional journey." />
+  <meta property="og:image" content="%PUBLIC_URL%/ogimage.jpg" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://domokosbalazs.ro/" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Domokos Balazs - Web & Game Developer" />
+  <meta name="twitter:description" content="Portfolio of Domokos Balazs: From web applications to immersive games, discover a unique blend of technology and creativity." />
+  <meta name="twitter:image" content="%PUBLIC_URL%/twitterimage.jpg" />
+  <link rel="canonical" href="https://domokosbalazs.ro/" />
 </head>
 
 <body>
